# ESP32_olimex_anchore

./: README.md  SYSTEM_PROMPT.md  partitions.csv  sdkconfig
components/ble/: CMakeLists.txt  ble.c  ble.h
components/ethernet/: CMakeLists.txt  ethernet.c  ethernet.h
components/ethernet/ethernet_sender/: CMakeLists.txt  aes_sender.c  aes_sender.h  ble_logger.c  ble_logger.h
components/key_storage/: CMakeLists.txt  key_storage.c  key_storage.h
components/udp_config/: CMakeLists.txt  udp_config.c  udp_config.h
components/webserver/: CMakeLists.txt  hb_status.h  http_bridge.h  http_server.c  uwb_cfg_cli.c  uwb_cfg_cli.h  web_stats.c  web_stats.cpp  web_stats.h  webserver.cpp  webserver.hpp
components/webserver/spiffs/: admin.html  diag.html  login.html  passwd.html  super_tooltips.js  super_user.html  web_stats.html
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  error_code_decoding.c  error_code_decoding.h  globals.c  globals.h  main.c
